Socket.io initial set up for chat

--- a/public/chat.html
+++ b/public/chat.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chat | Remote Workplace</title>
+        <title>Home | Remote Workplace</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-compatible" content="ie=edge">
+        <link rel="stylesheet" href="./css/chat.css">
     </head>
     <body>
-        <h1>Chat Page</h1>
+        <header class="chat-header">
+            <h1><i class="fas fa-smile"></i> ChatCord</h1>
+            <a href="index.html" class="btn">Leave Room</a>
+          </header>
+        <section class="chat-main">
+            <div class="chat-sidebar">
+                <h3><i class="fas fa-comments"></i> Room Name:</h3>
+                <h2 id="room-name">JavaScript</h2>
+                <h3><i class="fas fa-users"></i> Users</h3>
+                <ul id="users">
+                  <li>Brad</li>
+                  <li>John</li>
+                  <li>Mary</li>
+                  <li>Paul</li>
+                  <li>Mike</li>
+                </ul>
+              </div>
+              <div class="chat-messages">
+                <div class="message">
+                    <p class="meta">Brad <span>9:12pm</span></p>
+                    <p class="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+                        repudiandae.
+                    </p>
+                </div>
+                <div class="message">
+                    <p class="meta">Mary <span>9:15pm</span></p>
+                    <p class="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+                        repudiandae.
+                    </p>
+                </div>
+              </div>
+        </section>
+        <div class="chat-form-container">
+            <form id="chat-form">
+              <input
+                id="msg"
+                type="text"
+                placeholder="Enter Message"
+                required
+                autocomplete="off"
+              />
+              <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
+            </form>
+        </div>
+        <!--
+        <footer>
+            <p>Work in progress...</p>
+        </footer>
+        -->
+
+        <script src="./socket.io/socket.io.js"></script>
+        <script src="./js/index.js"></script>
     </body>
 </html>
