--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
             <input type="text" placeholder="password">
             <button>Submit</button>
         </form>
-        <script src="./js/index.js"></script>
+        <footer>
+            <p>Work in progress...</p>
+        </footer>
     </body>
 </html>
