--- a/public/chat.html
+++ b/public/chat.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="chat-header">
-            <h1><i class="fas fa-smile"></i> ChatCord</h1>
+            <h1><i class="fas fa-smile"></i> Remote Workplace</h1>
             <a href="index.html" class="btn">Leave Room</a>
           </header>
         <section class="chat-main">
