Chat Bot name & time

--- a/public/chat.html
+++ b/public/chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home | Remote Workplace</title>
+        <title>Work | Remote Workplace</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-compatible" content="ie=edge">
@@ -26,20 +26,7 @@
                 </ul>
               </div>
               <div class="chat-messages">
-                <div class="message">
-                    <p class="meta">Brad <span>9:12pm</span></p>
-                    <p class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                        repudiandae.
-                    </p>
-                </div>
-                <div class="message">
-                    <p class="meta">Mary <span>9:15pm</span></p>
-                    <p class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-                        repudiandae.
-                    </p>
-                </div>
+               <!-- dynamically added with js-->
               </div>
         </section>
         <div class="chat-form-container">
