--- a/public/chat.html
+++ b/public/chat.html
@@ -15,18 +15,16 @@
         <section class="chat-main">
             <div class="chat-sidebar">
                 <h3><i class="fas fa-comments"></i> Room Name:</h3>
-                <h2 id="room-name">JavaScript</h2>
+                <h2 id="room-name">
+                  <!-- Dynamically add room name -->
+                </h2>
                 <h3><i class="fas fa-users"></i> Users</h3>
                 <ul id="users">
-                  <li>Brad</li>
-                  <li>John</li>
-                  <li>Mary</li>
-                  <li>Paul</li>
-                  <li>Mike</li>
+                  <!-- Dynamically add list of users -->
                 </ul>
               </div>
               <div class="chat-messages">
-               <!-- dynamically added with js-->
+               <!-- Dynamically add chat messages -->
               </div>
         </section>
         <div class="chat-form-container">
